sish/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sish
  labels:
    app.kubernetes.io/name: sish
